lab1/Test/L1-A-3-56.output
Error Type B at Line 2
Error Type A at Line 4
Error Type A at Line 7
Error Type A at Line 12
Error Type B at Line 14
Error Type B at Line 16
Error Type B at Line 18
Error Type A at Line 19
