lab1/Test/L1-A-3-56.cmm
int rkYE2iS 
;< 
float T ( struct {
}~IWgiUvqDTLNitioVEiBJ ) {
  struct vAxkCVGgCy5SfcDh7Ed c7b7SNJgpMc_ [ 1105867331 
    ] , UPf6Ly8ClXlpBeyyQT [ 351490089 ] [ 224434591 ] 
    [ 1148504005 ] = ! udEK8vb1_ZWeR3j6MxHm = $WUnMLpth7HJWM6 
    ;
  float xJVpCZfAMiTSX772E = ! ! DJaMv9Ziq0xMgw - o7zQTG5g18Xf 
    - Dv == qM8lDuVGXbm < Lcs4FenU8RAzYjpywfT == WBhV2Ln0x3qOxR13vKf 
    <= lFYvp <= RokTO < p == lcCEE7XRAt != XdqFUG9CxuN7YhXil 
    < l0EItpFH < wunLGH_veTA && XqKIDprIQ ;:
}
if struct {
  float mYZLpQUhD88eQ_F = IMS3CbA1INqRt18A7dg ( ) 
    [ yiSOuhifRk2rR7qE3i4 ] else = O81Cc0uH , LJf9Y , 
    Pf93FLpSbMFnlCFY ;
}. ;
^